Add footer links for Privacy Policy and Support

--- a/index.html
+++ b/index.html
@@ -349,6 +349,10 @@
         
         <div class="footer">
             <p>© 2026 LabX. All rights reserved.</p>
+            <div style="display: flex; justify-content: center; gap: 24px; margin-top: 12px;">
+                <a href="https://ynl.github.io/labx/" style="color: #666; font-size: 14px;">Privacy Policy / 隐私政策</a>
+                <a href="https://ynl.github.io/labx/support.html" style="color: #666; font-size: 14px;">Support / 技术支持</a>
+            </div>
         </div>
     </div>
     
